# autoblocks-examples

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  next.config.js  package.json  pnpm-lock.yaml  renovate.json
.github/: renovate.json
.github/actions/create-env-file/: action.yml
.github/workflows/: autoblocks-replays.yml  autoblocks-testing.yml  ci.yml  jest-replays.yml
JavaScript/ai-jsx/: README.md  package-lock.json  package.json  tsconfig.json
JavaScript/ai-jsx/src/: index.tsx
JavaScript/chatbot-nextjs/: README.md  next.config.js  package-lock.json  package.json
JavaScript/jest-replays/: README.md  package-lock.json  package.json
JavaScript/jest-replays/src/: index.js  run.js
JavaScript/jest-replays/test/: index.spec.js  run.spec.js
JavaScript/langchain/: README.md  package-lock.json  package.json
JavaScript/langchain/src/: index.js
JavaScript/novel-ai-text-editor/: README.md  package-lock.json  package.json
JavaScript/openai/: package-lock.json  package.json  readme.md
JavaScript/openai-assistants-api/: README.md  package-lock.json  package.json
JavaScript/openai-assistants-api/src/: index.ts  with-prompt-sdk.ts
JavaScript/openai-automated/: README.md  package-lock.json  package.json  readme.md
JavaScript/openai-automated-ts/: README.md  package-lock.json  package.json  tsconfig.json
JavaScript/openai-manual/: README.md  package-lock.json  package.json  readme.md
JavaScript/openai-tracing/: README.md  package-lock.json  package.json
JavaScript/prompt-sdk/: README.md  package-lock.json  package.json  tsconfig.json
JavaScript/prompt-sdk-headless/: README.md  package-lock.json  package.json
JavaScript/prompt-sdk-local/: README.md  package-lock.json  package.json
JavaScript/spans/: README.md  package-lock.json  package.json
JavaScript/testing-sdk/: README.md  package-lock.json  package.json
Python/auto-tracer/: README.md  pyproject.toml
Python/auto-tracer/auto_tracer/: run.py
Python/dspy/: README.md  pyproject.toml
Python/dspy/my_project/: config.py  datasets.py  evaluate.py  models.py  run.py
Python/flask/: README.md  pyproject.toml
Python/flask/myapp/: ai.py  app.py  tracer.py
Python/guardrails-ai/: README.md  pyproject.toml
Python/guardrails-ai/src/: evaluators.py  main.py  test_cases.py  test_suite.py
Python/langchain/: README.md  main.py  pyproject.toml
Python/langchain/src/: main.py
Python/openai/: README.md  main.py  pyproject.toml  readme.md
Python/openai-assistants-api/: .autoblocks.yml  README.md  pyproject.toml
Python/openai-assistants-api/src/: main-with-prompt-sdk.py  main.py  prompts.py
Python/openai-automated/: README.md  main.py  pyproject.toml
Python/openai-manual/: README.md  main.py  pyproject.toml
Python/openai-manual/src/: main.py
Python/openai-tracing/: README.md  pyproject.toml
Python/openai-tracing/src/: main.py
Python/pinecone/: .autoblocks.yml  README.md  pyproject.toml
Python/pinecone/autoblocks_pinecone/: app.py  config.py  prompt_managers.py  prompts.py
Python/pinecone/autoblocks_pinecone/data/: constants.py  load_pinecone_data.py  medical_records.py  model.py  search.py
Python/pinecone/autoblocks_pinecone/data/medical_records_raw_files/: patient-1.csv
Python/pinecone/autoblocks_pinecone/data/medical_records_raw_files/patient-1/: 10_2_Past Medical History.txt  11_2_Physical Examination.txt  15_3_History of Present Illness.txt  16_3_Past Medical History.txt  17_3_Physical Examination.txt  20_4_History of Present Illness.txt  21_4_Past Medical History.txt  22_4_Physical Examination.txt  25_5_History of Present Illness.txt  26_5_Past Medical History.txt  27_5_Physical Examination.txt  3_1_History of Present Illness.txt  4_1_Past Medical History.txt  5_1_Physical Examination.txt  9_2_History of Present Illness.txt
Python/pinecone/autoblocks_pinecone/test_suites/: run.py
Python/pinecone/autoblocks_pinecone/test_suites/e2e/: evaluators.py  test_cases.py  test_suite.py
Python/pinecone/autoblocks_pinecone/test_suites/generation/: evaluators.py  test_cases.py  test_suite.py
Python/pinecone/autoblocks_pinecone/test_suites/retrieval/: evaluators.py  test_cases.py  test_suite.py
Python/pinecone/tools/: create_prompts.py
Python/prompt-sdk/: .autoblocks.yml  README.md  pyproject.toml
Python/prompt-sdk-headless/: .autoblocks.yml  README.md  pyproject.toml
Python/prompt-sdk-headless/prompt_sdk_headless/: main.py
Python/prompt-sdk-headless/src/: main.py  prompts.py
Python/prompt-sdk/src/: main.py  prompts.py
Python/pytest-replays/: README.md  main.py  pyproject.toml  test_main.py
Python/pytest-replays/src/: main.py
Python/pytest-replays/test/: test_main.py
Python/testing-sdk/: README.md  pyproject.toml
Python/testing-sdk-with-prompt-sdk/: .autoblocks.yml  README.md  pyproject.toml
Python/testing-sdk-with-prompt-sdk/my_project/: prompt_managers.py  prompts.py  run.py
Python/testing-sdk-with-prompt-sdk/my_project/tasks/: flashcard_generator.py  study_guide_outline.py
Python/testing-sdk-with-prompt-sdk/my_project/test_suites/flashcard_generator/: __init__.py  evaluators.py  test_cases.py
Python/testing-sdk-with-prompt-sdk/my_project/test_suites/study_guide_outline/: __init__.py  test_cases.py
Python/testing-sdk-with-prompt-sdk/tools/: create_prompts.py
Python/testing-sdk/my_project/: run.py
Python/testing-sdk/my_project/evaluators/: has_substrings.py  is_valid_json.py
Python/testing-sdk/my_project/tasks/: flashcard_generator.py  study_guide_outline.py
Python/testing-sdk/my_project/test_suites/: util.py
Python/testing-sdk/my_project/test_suites/flashcard_generator/: __init__.py  evaluators.py  test_cases.py
Python/testing-sdk/my_project/test_suites/flashcard_generator_managed/: __init__.py
Python/testing-sdk/my_project/test_suites/study_guide_outline/: __init__.py  evaluators.py  test_cases.py
src/: middleware.ts
src/components/: Nav.tsx
src/pages/: _app.tsx  auto-assign.tsx  chat.tsx  document-generator.tsx  email.tsx  index.tsx  playground.tsx
src/pages/api/: chat.ts  (+4 more)
tools/: make-readmes.js  make-toc.js
(+40 files in other folders)
