[tool.poetry]
name = "flask-tracer"
description = "Autoblocks tracing within a [Flask](https://flask.palletsprojects.com/) application"
version = "0.0.0"
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "myapp"}]

[tool.poetry.dependencies]
python = "^3.9"
autoblocksai = { git = "https://github.com/autoblocksai/python-sdk.git", rev = "c73df2a91a53ae894f0bd6771ce1cc620f97b914" }
python-dotenv = "^1.0.0"
flask = "^3.0.0"
