[tool.poetry]
name = "langchain-example"
version = "0.0.0"
description = "Automatic tracing of a LangChain pipeline"
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
autoblocksai = "^0.0.11"
python-dotenv = "^1.0.0"
openai = "^0.28.1"
numexpr = "^2.8.7"
langchain = "^0.0.323"
