[tool.poetry]
name = "langchain-example"
version = "0.0.0"
description = "Automatic tracing of a LangChain pipeline"
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
autoblocksai = "^0.0.22"
python-dotenv = "^1.0.0"
openai = "1.9.0"
numexpr = "^2.8.7"
langchain = "^0.1.0"

[tool.poetry.scripts]
start = "src.main:main"
