[tool.poetry]
name = "openai-manual"
description = "Manual tracing of openai calls"
version = "0.0.0"
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.0"
autoblocksai = "^0.0.13"
python-dotenv = "^1.0.0"
