[tool.poetry]
name = "prompt-sdk-headless"
description = "Safely integrate prompts managed in the Autoblocks platform into your application"
version = "0.0.0"
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
autoblocksai = { git = "https://github.com/autoblocksai/python-sdk.git", rev = "767aa833015ccd72eff62e804db2c2db5dc9568e" }
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"

[tool.poetry.scripts]
start = "src.main:main"
