[tool.poetry]
name = "testing-sdk-with-prompt-sdk"
version = "0.0.0"
description = "Using the Autoblocks Testing SDK with the Prompt SDK for experimentation, regression testing, and rapid prototyping."
authors = [
    "Autoblocks Engineering <engineering@autoblocks.ai>",
]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.11"
autoblocksai = "^0.0.106"
openai = "^1.0.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
create-prompts = "tools.create_prompts:main"
# This will execute the run() function in my_project/run.py
start = "my_project.run:run"
